--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>taskly</title>
 </head>
 
-<body class="bg-taskly-gradient min-h-screen">
+<body class="bg-taskly-gradient min-h-screen p-3.5 overflow-x-hidden">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
